--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>RolandmeoGithubIo</title>
+    <title>rolandmeo.github.io</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
-<app-root></app-root>
+<div class="container">
+    <div class="app">
+        <app-root></app-root>
+    </div>
+    <div class="footer"><a href="https://github.com/rolandmeo/rolandmeo.github.io">repo</a></div>
+</div>
 </body>
 </html>
