--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
-<div class="container">
+<div class="bar-container">
     <div class="app">
         <app-root></app-root>
     </div>
